--- a/app/_components/button/button.styles.scss
+++ b/app/_components/button/button.styles.scss
@@ -5,7 +5,7 @@
   font-family: $font-primary;
   border: none;
   color: $color-white;
-  background-color: $color-black;
+  background-color: $color-black-transparent;
   transition: background-color 0.4s ease-in-out;
 
   &:hover {
