--- a/app/_components/footer/footer.styles.scss
+++ b/app/_components/footer/footer.styles.scss
@@ -2,6 +2,6 @@
   display: flex;
   align-items: center;
   color: $color-white;
-  background-color: $color-black;
+  background: linear-gradient(270deg, rgba(243, 238, 238, .5) 0%, rgba(15,15,15,.5) 100%);
   padding: $padding-default;
 }
