--- a/app/_components/nav-links/nav-links.styles.scss
+++ b/app/_components/nav-links/nav-links.styles.scss
@@ -1,4 +1,5 @@
 .nav-links {
+  z-index: 100;
   display: grid;
   position: fixed;
   z-index: 10;
@@ -14,6 +15,7 @@
   text-transform: uppercase;
   text-align: center;
 
+  color: $color-black;
   background-color: $color-white;
 
   &--closed {
@@ -32,5 +34,6 @@
     font-size: 1.5rem;
     background-color: transparent;
     text-align: start;
+    color: $color-white;
   }
 }
