--- a/app/_components/nav/nav.styles.scss
+++ b/app/_components/nav/nav.styles.scss
@@ -1,9 +1,18 @@
 .nav {
-  z-index: 25;
+  z-index: 1000;
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   padding: $padding-default;
-  background-color: $color-black;
+  background: $gradient-linear-grayscale;
   color: $color-white;
+
+  &--overlay {
+    position: fixed;
+  }
+
+  &--transparent {
+    background: transparent;
+  }
 }
