--- a/app/_styles/global/_variables.scss
+++ b/app/_styles/global/_variables.scss
@@ -12,15 +12,18 @@ $color-black-transparent: rgba(0, 0, 0, .7);
 $color-green: #492323;
 $color-white: #FFFFFF;
 
+// gradients
+$gradient-linear-grayscale: linear-gradient(90deg, rgba(243, 238, 238, .5) 0%, rgba(15,15,15,.8) 100%);
+
 // sizing
 $height-footer: 4rem;
 $height-nav: 4rem;
-$height-main: calc(100% - $height-nav - $height-footer);
 $max-width-card: 80rem;
 $border-radius: .5rem;
 
 // spacing
 $padding-default: 1rem;
+$padding-sm: 0.5rem;
 $padding-lg: 2rem;
 
 // breakpoints
