--- a/app/_components/button/button.styles.scss
+++ b/app/_components/button/button.styles.scss
@@ -17,6 +17,19 @@
 
   &__link {
     display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  &--edit {
+    position: absolute;
+    z-index: 20;
+    top: $padding-default;
+    right: 0;
+    padding: 0 $padding-default;
+  }
+
+  &--cta {
     padding: $padding-default;
   }
 }
