--- a/app/_components/hero/hero.styles.scss
+++ b/app/_components/hero/hero.styles.scss
@@ -1,18 +1,18 @@
 .hero {
   position: relative;
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
 
-  display: flex;
-  justify-content: center;
-
   &__content {
     position: absolute;
-    display: flex;
     bottom: 40%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    gap: $padding-default;
   }
 
   &__text {
@@ -21,13 +21,5 @@
     text-transform: uppercase;
     font-size: 5rem;
     font-family: $font-header;
-  }
-
-  &__button {
-    margin-top: 1rem;
-  }
-
-  &--closed {
-    display: none;
   }
 }
