mobile styling for categories page

--- a/app/(pages)/categories/categories-page.styles.scss
+++ b/app/(pages)/categories/categories-page.styles.scss
@@ -1,7 +1,8 @@
 .categories-page {
   position: relative;
   display: grid;
-  grid-template-rows: max-content 1fr;
+  grid-template-rows: repeat(3, max-content);
+  width: 100%;
   overflow: scroll;
 }
 
