--- a/app/_components/block-menu/block-menu.styles.scss
+++ b/app/_components/block-menu/block-menu.styles.scss
@@ -1,21 +1,21 @@
 .block-menu {
   position: relative;
   width: 100%;
-  z-index: 1;
+  z-index: 0;
   font-family: $font-header;
   background-color: $color-white;
   color: $color-black;
-  overflow: scroll;
-
-  &__item {
-    position: relative;
-  }
 
   &__items {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: $padding-lg;
+    position: relative;
+    width: 100%;
     padding: $padding-lg;
     list-style: none;
+
+    @media (min-width: $breakpoint-md) {
+      display: grid;
+      gap: $padding-lg;
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
