--- a/app/_components/header/header.styles.scss
+++ b/app/_components/header/header.styles.scss
@@ -1,12 +1,16 @@
 .header {
   position: relative;
   width: 100%;
-  height: 30rem;
+  height: 20rem;
   display: flex;
   justify-content: center;
   
   color: $color-black;
   overflow: hidden;
+
+  @media (min-width: $breakpoint-md) {
+    height: 30rem;
+  }
  
   &--stacked {
     flex-direction: column;
