--- a/app/_components/summary/summary.styles.scss
+++ b/app/_components/summary/summary.styles.scss
@@ -1,10 +1,15 @@
 .summary {
   position: relative;
+  width: 100%;
   display: grid;
-  grid-template-columns: max-content 1fr;
+  grid-template-columns: 1fr;
   padding: $padding-lg;
   gap: $padding-lg;
   font-family: $font-primary;
+
+  @media (min-width: $breakpoint-md) {
+    grid-template-columns: max-content 1fr;
+  }
 
   &__header {
     text-transform: uppercase;
@@ -18,6 +23,4 @@
       line-height: 100%;
     }
   }
-
-
 }
