--- a/app/_components/card/card.styles.scss
+++ b/app/_components/card/card.styles.scss
@@ -1,4 +1,5 @@
 .card {
+  width: 100%;
   position: relative;
   display: grid;
   grid-template-rows: repeat(4, max-content);
@@ -9,7 +10,6 @@
 
   @media (min-width: $breakpoint-md) {
     width: 100%;
-    
     grid-template-rows: max-content max-content 1fr max-content;
     background-color: $color-white;
 
@@ -28,6 +28,8 @@
   }
 
   &__image-container {
+    width: 100%;
+
     @media (min-width: $breakpoint-md) {
       width: 100%;
       grid-column: 2 / -1;
@@ -40,6 +42,7 @@
   }
 
   &__image {
+    width: 100%;
     height: auto;
     border-radius: $border-radius;
 
