--- a/app/_components/logo/logo.styles.scss
+++ b/app/_components/logo/logo.styles.scss
@@ -1,8 +1,13 @@
 .logo {
   cursor: pointer;
   filter: invert(100%);
+  z-index: 1;
 
   &--dark {
     filter: invert(0%);
+  }
+
+  &__image {
+    z-index: -1;
   }
 }
