--- a/app/_components/card/card.styles.scss
+++ b/app/_components/card/card.styles.scss
@@ -21,6 +21,13 @@
       grid-template-columns: 30rem 1fr;
     }
 
+    &:nth-child(odd) > 
+    &__image-container > 
+    &__link {
+      display: flex;
+      justify-content: flex-end;
+    }
+
     &:nth-child(even) > 
     &__image-container {
       grid-column: 1 / 2;
@@ -29,6 +36,8 @@
 
   &__image-container {
     width: 100%;
+    max-height: 60rem;
+    overflow: hidden;
 
     @media (min-width: $breakpoint-md) {
       width: 100%;
@@ -46,12 +55,14 @@
     height: auto;
     border-radius: $border-radius;
 
-    @media (min-width: $breakpoint-md) {
-      width: 100%;
+    &--product {
+      width: auto;
+      height: 40rem;
     }
   }
 
   &__header-container {
+    place-self: start;
     @media (min-width: $breakpoint-md) {
       width: 100%;
       height: 100%;
