--- a/app/_components/nav-links/nav-links.styles.scss
+++ b/app/_components/nav-links/nav-links.styles.scss
@@ -3,7 +3,7 @@
   display: grid;
   position: fixed;
   z-index: 10;
-  top: calc($height-nav);
+  top: 0;
   bottom: $height-footer;
   left: 0;
   right: 0;
