fixed edit button positioning in block-menu

--- a/app/_components/block-menu/block-menu.styles.scss
+++ b/app/_components/block-menu/block-menu.styles.scss
@@ -6,6 +6,10 @@
   background-color: $color-white;
   color: $color-black;
 
+  &__item {
+    position: relative;
+  }
+
   &__items {
     position: relative;
     width: 100%;
