--- a/app/_components/header/header.styles.scss
+++ b/app/_components/header/header.styles.scss
@@ -3,8 +3,8 @@
   width: 100%;
   height: 20rem;
   display: flex;
-  justify-content: center;
-  
+  align-items: start;
+  justify-content: end;
   color: $color-black;
   overflow: hidden;
 
@@ -25,17 +25,26 @@
     position: relative;
     z-index: 20;
     padding: $padding-sm $padding-default;
+    margin-right: $padding-lg;
     font-family: $font-header;
     font-size: $font-size-header;
     text-transform: uppercase;
     background-color: $color-black-transparent;
 
+    @media (min-width: $breakpoint-md) {
+      font-size: 4rem;
+    }
+
     &--overlay {
       color: $color-white;
       position: absolute;
       text-align: center;
-      top: 50%;
+      top: 30%;
       transform: translateY(-50%);
+
+      @media (min-width: $breakpoint-md) {
+        top: 25%;
+      }
     }
     
     &--stacked {
