set downloads to open in new tab

--- a/app/(pages)/categories/[slug]/category-page.styles.scss
+++ b/app/(pages)/categories/[slug]/category-page.styles.scss
@@ -1,5 +1,6 @@
 .category-page {
   position: relative;
   width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
+  scrollbar-gutter: initial;
 }
