--- a/app/_components/summary/summary.styles.scss
+++ b/app/_components/summary/summary.styles.scss
@@ -20,4 +20,15 @@
   &__copy {
     font-size: $font-size-md;
   }
+
+  &__image-container {
+    position: relative;
+    grid-column: 1 / -1;
+    width: 100%;
+  }
+
+  &__image {
+    width: 100%;
+    height: auto;
+  }
 }
